@@ -38,7 +38,6 @@
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
   <uses-permission android:name="android.permission.VIBRATE"/>
-  <uses-permission android:name="android.permission.READ_LOGS"/> <!-- to save crash dumps -->
 
   <!-- Disable implicit requirements -->
   <uses-feature android:name="android.hardware.bluetooth" android:required="false"/>
