@@ -163,21 +163,6 @@ Fehlers oberste Priorität vor der evtl.\  Neueinführung von gewünschten und g
 Stabilität des Programmes ist oberstes Gebot.
 
 
-Es gibt daher für die immer weiter fortschreitende und sich extrem stark durchsetzende Android-Version eine Crash-Report-Verfolgung,
-auf welche die Crash Reports der Androids, welche z.B.\  unter
-\begin{tabbing}
-{\small\texttt{/mnt/SDCard/XCSoarData/crash/..}}\\
-\qquad\qquad{\small\texttt{../crash-2013-01-05-10-24-09-3998.txt}}
-\end{tabbing}
-oder
-\begin{tabbing}
-{\small\texttt{/mnt/extSDCard/XCSoarData/crash/..}}\\
-\qquad\qquad{\small\texttt{../crash-2013-01-05-10-24-09-3998.txt}}
-\end{tabbing}
-abgelegt werden - je nachdem wie das File heißt und wo sich das XCSoarData-Verzeichnis befindet--
-zur Begutachtung hochgeladen werden können. (Der Filename enthält das Datum sowie eine codierte Nummer)
-
-
 Die Software Entwickler halten alle Kontakt miteinander über dies SourceForge-Entwickler-mailing- Liste:
 \begin{quote}
 \url{xcsoar-devel@lists.sourceforge.net}
