@@ -70,14 +70,6 @@ class MainWindow : public SingleWindow {
      * @see DeferredRestorePage()
      */
     RESTORE_PAGE,
-
-#ifdef ANDROID
-    /**
-     * A previous crash has been detected, and the crash log was
-     * saved.
-     */
-    CRASH,
-#endif
   };
 
   static constexpr const TCHAR *title = _T("XCSoar");
@@ -265,12 +257,6 @@ public:
   void SendCalculatedUpdate() {
     SendUser((unsigned)Command::CALCULATED_UPDATE);
   }
-
-#ifdef ANDROID
-  void SendCrash() {
-    SendUser((unsigned)Command::CRASH);
-  }
-#endif
 
   void SetTerrain(RasterTerrain *terrain);
   void SetTopography(TopographyStore *topography);
